# ita_root/ita_api_organization/controllers/menu_maintenance_all_controller.py
@@ -11,27 +11,23 @@
 #   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
-
 import connexion
 import six
 
-# from swagger_server.models.inline_response2001 import InlineResponse2001  # noqa: E501
-# from swagger_server import util
 
-
-def maintenance_all(body, workspace, menu):  # noqa: E501
+def maintenance_all(body, workspace_id, menu):  # noqa: E501
     """maintenance_all
 
     レコードを一括で登録/更新/廃止/復活する # noqa: E501
 
     :param body: 
     :type body: dict | bytes
-    :param workspace: ワークスペース名
-    :type workspace: str
+    :param workspace_id: ワークスペース名
+    :type workspace_id: str
     :param menu: メニュー名
     :type menu: str
 
-    :rtype: InlineResponse2001
+    :rtype: InlineResponse200
     """
     if connexion.request.is_json:
         body = object.from_dict(connexion.request.get_json())  # noqa: E501
